openshift/network-policy/web-allow-external.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
  namespace: ${NAMESPACE}
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:ingress': {}
          'f:podSelector':
            'f:matchLabels':
              .: {}
              'f:app': {}
          'f:policyTypes': {}
spec:
  podSelector:
    matchLabels:
      app: hello-world
  ingress:
    - {}
  policyTypes:
    - Ingress
parameters:
- name: NAMESPACE
  displayName: Namespacee
  description: The name assigned to all of the objects defined in this template.
  required: true
  value: adccd1-tools
